--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
-    <title>Basic Scatter Plot</title>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <title>US Map</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <div id="usamap"></div>
     <svg width="960" height="500"></svg>
-    <script src="script.js"></script>
+    <script src="User1Task1.js"></script>
   </body>
 </html>
