--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <title>US Map</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <div id="usamap"></div>
-    <svg width="960" height="500"></svg>
-    <script src="User1Task1.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <title>Dashboard</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <div class="dashboarddiv" id="usamap" style="width: 400px; height: 400px;">
+    <script src="JavaScript/USMap.js"></script>
+  </div>
+  <div class="dashboarddiv" id="BarChartState" style="width: 400px; height: 400px; overflow-x: scroll">
+    <script src="JavaScript/BarChart_StateWise.js"></script>
+  </div>
+  <div class="dashboarddiv" id="BarChartYear" style="width: 400px; height: 400px; overflow-x: scroll">
+    <script src="JavaScript/BarChart_YearWise.js"></script>
+  </div>
+</body>
+
 </html>
