Containerizing each div for placing in the dashboard

--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 </head>
 
 <body>
-  <div class="dashboarddiv" id="usamap" style="width: 400px; height: 400px;">
-    <script src="JavaScript/USMap.js"></script>
-  </div>
-  <div class="dashboarddiv" id="BarChartState" style="width: 400px; height: 400px; overflow-x: scroll">
-    <script src="JavaScript/BarChart_StateWise.js"></script>
-  </div>
-  <div class="dashboarddiv" id="BarChartYear" style="width: 400px; height: 400px; overflow-x: scroll">
-    <script src="JavaScript/BarChart_YearWise.js"></script>
+  <div class="dashboarddiv">
+    <div class="col leftup">
+      <div class="row" id="BarChartState" style="width: 400px; height: 400px; overflow-x: scroll">
+        <script src="JavaScript/BarChart_StateWise.js"></script>
+      </div>
+      <div class="row" id="BarChartYear" style="width: 400px; height: 400px; overflow-x: scroll">
+        <script src="JavaScript/BarChart_YearWise.js"></script>
+      </div>
+    </div>
+    <div class="col" id="usamap" style="width: 700px; height: 500px;"> 
+      <script src="JavaScript/USMap.js"></script>
+    </div>
+    
   </div>
 </body>
-
 </html>
