Making functions for each graph, enabling interaction btw map and bar charts

--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
   <div class="dashboarddiv">
     <div class="col leftup">
       <div class="row" id="BarChartState" style="width: 400px; height: 400px; overflow-x: scroll">
-        <script src="JavaScript/BarChart_StateWise.js"></script>
+        <svg ></svg>
+        <script type="module" src="JavaScript/BarChart_StateWise.js"></script>
       </div>
       <div class="row" id="BarChartYear" style="width: 400px; height: 400px; overflow-x: scroll">
-        <script src="JavaScript/BarChart_YearWise.js"></script>
+        <svg ></svg>
+        <script type="module" src="JavaScript/BarChart_YearWise.js"></script>
       </div>
     </div>
     <div class="col" id="usamap" style="width: 700px; height: 500px;"> 
-      <script src="JavaScript/USMap.js"></script>
+      <script type="module" src="JavaScript/USMap.js"></script>
     </div>
     
   </div>
