--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 </head>
 
 <body>
-  <div class="dashboarddiv">
-    <div class="col leftup">
-      <div class="row" id="BarChartState" style="width: 400px; height: 400px; overflow-x: scroll">
-        <svg ></svg>
-        <script type="module" src="JavaScript/BarChart_StateWise.js"></script>
-      </div>
-      <div class="row" id="BarChartYear" style="width: 400px; height: 400px; overflow-x: scroll">
-        <svg ></svg>
-        <script type="module" src="JavaScript/BarChart_YearWise.js"></script>
-      </div>
+  <div class="container">
+    <div class="area-1" id="BarChartState" style="overflow-x: scroll">
+      <svg ></svg>
+      <script type="module" src="JavaScript/BarChart_StateWise.js"></script>
     </div>
-    <div class="col" id="usamap" style="width: 700px; height: 500px;"> 
+    <div class="area-2" id="BarChartYear" style="overflow-x: scroll">
+      <svg ></svg>
+      <script type="module" src="JavaScript/BarChart_YearWise.js"></script>
+    </div>
+    <div class="area-3"></div>
+    <div class="area-4"></div>
+    <div class="area-5" id="usamap" style="width: 765px; height: 500px;">
       <script type="module" src="JavaScript/USMap.js"></script>
     </div>
-    
-  </div>
+    <div class="area-6"></div>
+  </div> 
 </body>
 </html>
