--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       <script type="module" src="JavaScript/BarChart_YearWise.js"></script>
     </div>
     <div class="area-3"></div>
-    <div class="area-4"></div>
+    <div class="area-4" id="EducationLevels" style="overflow-x: scroll">
+      <svg ></svg>
+      <script type="module" src="JavaScript/EducationLevels.js"></script>
+    </div>
     <div class="area-5" id="usamap" style="width: 765px; height: 500px;">
       <script type="module" src="JavaScript/USMap.js"></script>
     </div>
