line chart attempt kinda failed i guess. check it out though for more graphs.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
       <svg ></svg>
       <script type="module" src="JavaScript/BarChart_YearWise.js"></script>
     </div>
-    <div class="area-3"></div>
-    <div class="area-4"></div>
+    <div class="area-3" id="BarChartYear" style="overflow-x: scroll">
+      <svg ></svg>
+      <script type="module" src="JavaScript/LineChart_HousingPrices.js"></script>
+    </div>
+    <div class="area-4" id="BarChartYear" style="overflow-x: scroll"></div>
     <div class="area-5" id="usamap" style="width: 765px; height: 500px;">
       <script type="module" src="JavaScript/USMap.js"></script>
     </div>
