--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+  <div>
+    <div class="titlebox">
+    <h4 class="titletext">Housing Prices Dashboard</h4>
+  </div>
   <div class="container">
     <div class="area-1" id="BarChartState" style="overflow-x: scroll">
       <svg ></svg>
