Integrated Property and Poverty

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       <svg ></svg>
       <script type="module" src="JavaScript/BarChart_YearWise.js"></script>
     </div>
-    <div class="area-3"></div>
+    <div class="area-3" id="HousingPrices" style="overflow-x: scroll">
+      <svg ></svg>
+      <script type="module" src="JavaScript/HousingPrice.js"></script>
+    </div>
     <div class="area-4" id="EducationLevels" style="overflow-x: scroll">
       <svg ></svg>
       <script type="module" src="JavaScript/EducationLevels.js"></script>
@@ -27,7 +30,10 @@
     <div class="area-5" id="usamap" style="width: 765px; height: 500px;">
       <script type="module" src="JavaScript/USMap.js"></script>
     </div>
-    <div class="area-6"></div>
+    <div class="area-6" id="PovertyRates" style="overflow-x: scroll">
+      <svg ></svg>
+      <script type="module" src="JavaScript/PovertyRates.js"></script>
+    </div>
   </div> 
 </body>
 
