Made layout changes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <svg ></svg>
       <script type="module" src="JavaScript/EducationLevels.js"></script>
     </div>
-    <div class="area-5" id="usamap" style="width: 765px; height: 500px;">
+    <div class="area-5" id="usamap">
       <script type="module" src="JavaScript/USMap.js"></script>
     </div>
     <div class="area-6" id="PovertyRates" style="overflow-x: scroll">
