Adding changes for dropdown

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
   <div>
     <div class="titlebox">
-    <h4 class="titletext">Housing Prices Dashboard</h4>
+    <h2 class="titletext">Housing Prices Dashboard</h2>
+  </div>
+  <div>
+    <select class="dropdown" id="selectButton"></select>
   </div>
   <div class="container">
     <div class="area-1" id="BarChartState" style="overflow-x: scroll">
