Adding code for selecting svg and appending for us map

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <script type="module" src="JavaScript/EducationLevels.js"></script>
     </div>
     <div class="area-5" id="usamap">
+      <svg ></svg>
       <script type="module" src="JavaScript/USMap.js"></script>
     </div>
     <div class="area-6" id="PovertyRates">
