Added Legends and Map Dependencies

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <div class="area-6" id="PovertyRates">
       <svg ></svg>
-      <script type="module" src="JavaScript/PovertyRates.js"></script>
+      <script type="module" src="JavaScript/PovertyRates.js" style="overflow-x: scroll"></script>
     </div>
   </div> 
 </body>
