Finished for now

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <select class="dropdown" id="selectButton"></select>
   </div>
   <div class="container">
-    <div class="area-1" id="BarChartState" style="overflow-x: scroll">
+    <!--  style="overflow-x: scroll" -->
+    <div class="area-1" id="BarChartState">
       <svg ></svg>
       <script type="module" src="JavaScript/BarChart_StateWise.js"></script>
     </div>
@@ -40,7 +41,7 @@
     </div>
     <div class="area-6" id="PovertyRates">
       <svg ></svg>
-      <script type="module" src="JavaScript/PovertyRates.js" style="overflow-x: scroll"></script>
+      <script type="module" src="JavaScript/PovertyRates.js"></script>
     </div>
   </div> 
 </body>
